--- a/SyncStream/src/main/res/layout/settings.xml
+++ b/SyncStream/src/main/res/layout/settings.xml
@@ -209,7 +209,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_rowWeight="1"
-                android:text="Reset Ultima"
+                android:text="Reset SyncStream"
                 android:textSize="18sp"
                 android:textStyle="bold" />
 
