--- a/StreamingCommunity/src/main/res/layout/settings.xml
+++ b/StreamingCommunity/src/main/res/layout/settings.xml
@@ -12,8 +12,7 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="48dp"
-        android:layout_marginBottom="8dp">
+        android:layout_height="48dp">
 
         <TextView
             android:id="@+id/header_tw"
@@ -22,7 +21,7 @@
             android:layout_alignParentStart="true"
             android:layout_centerVertical="true"
             android:text="@string/header_tw"
-            android:textSize="22sp"
+            android:textSize="24sp"
             android:textStyle="bold" />
 
         <ImageButton
@@ -35,37 +34,36 @@
             android:layout_centerVertical="true"
             android:background="@android:color/transparent"
             android:contentDescription="Salva impostazioni" />
-
     </RelativeLayout>
 
-    <RelativeLayout
+    <View
+        android:id="@+id/divider"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="16dp"
+        android:background="@android:color/transparent" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="horizontal">
 
         <TextView
-            android:id="@+id/lang_tw"
+            android:id="@+id/label"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentTop="false"
-            android:layout_alignParentBottom="false"
-            android:layout_centerInParent="true"
-            android:layout_marginStart="0dp"
-            android:layout_marginTop="2dp"
-            android:text="@string/lang_tw"
-            android:textSize="16sp" />
+            android:layout_weight="1"
+            android:text="@string/label" />
 
         <Spinner
-            android:id="@+id/lang_dropdown"
+            android:id="@+id/lang_spinner"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-            android:layout_marginEnd="8.dp"
-            android:spinnerMode="dropdown" />
-    </RelativeLayout>
+            android:layout_height="wrap_content" />
+    </LinearLayout>
 
-    <Space
+    <View
+        android:id="@+id/divider2"
         android:layout_width="match_parent"
-        android:layout_height="24.dp" />
+        android:layout_height="16dp"
+        android:background="@android:color/transparent" />
 
 </LinearLayout>
