--- a/AltaDefinizione/src/main/res/layout/settings.xml
+++ b/AltaDefinizione/src/main/res/layout/settings.xml
@@ -20,7 +20,7 @@
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
             android:layout_centerVertical="true"
-            android:text="Altadefinizione" 
+            android:text="@string/header_tw"  
             android:textSize="24sp"
             android:textStyle="bold" />
 
@@ -50,10 +50,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="Versione Sito:" />
+            android:text="@string/label" />  
 
         <Spinner
-            android:id="@+id/lang_spinner"
+            android:id="@+id/lang_spinner"  
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
     </LinearLayout>
